--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="assets/html/lev1_1.html">Lev1_1</a>
     <a href="assets/html/lev1_2.html">Lev1_2</a>
     <a href="assets/html/lev1_3.html">Lev1_3</a>
+    <a href="assets/html/lev2_2.html">Lev2_2</a>
 
     <script src="assets/js/main.js"></script>
 </body>
