--- a/assets/html/lev2_2.html
+++ b/assets/html/lev2_2.html
@@ -11,6 +11,7 @@
 <body>
     <div id="bgColor"
         style="height: 100vh; width: 100vw; display:flex; justify-content:center; align-items:center; text-align:center;">
+        <a href="../../index.html">zurück zur Startseite</a>
         <form action="" onsubmit="return false">
             <p>Bitte geben Sie an, wie die Luftqualität an Ihrem Ort ist:</p>
             <label for="" id="label"></label>
