--- a/assets/html/lev2_2.html
+++ b/assets/html/lev2_2.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
+    <a href="../../index.html">zurück zur Startseite</a>
     <div id="bgColor"
-        style="height: 100vh; width: 100vw; display:flex; justify-content:center; align-items:center; text-align:center;">
-        <a href="../../index.html">zurück zur Startseite</a>
+        style="height: 95vh; width: 100%; display:flex; justify-content:center; align-items:center; text-align:center;">
         <form action="" onsubmit="return false">
             <p>Bitte geben Sie an, wie die Luftqualität an Ihrem Ort ist:</p>
             <label for="" id="label"></label>
