--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>JS Conditional Statements</title>
 </head>
 
 <body>
-    <a href="assets/html/lev1_1.html">Lev1_1 </a>
-    <a href="assets/html/lev1_2.html">Lev1_2 </a>
-    <a href="assets/html/lev1_3.html">Lev1_3 </a>
-    <a href="assets/html/lev2_2.html">Lev2_2 </a>
-    <a href="assets/html/lev2_5.html">Lev2_5 </a>
-    <a href="assets/html/lev2_7.html">Lev2_7 </a>
-    <a href="assets/html/semi_horoskop.html">Semi Horoskop </a>
-
+    <div>
+        <a href="assets/html/lev1_1.html">Lev1_1 </a>
+        <a href="assets/html/lev1_2.html">Lev1_2 </a>
+        <a href="assets/html/lev1_3.html">Lev1_3 </a>
+        <a href="assets/html/lev2_2.html">Lev2_2 </a>
+        <a href="assets/html/lev2_5.html">Lev2_5 </a>
+        <a href="assets/html/lev2_7.html">Lev2_7 </a>
+        <a href="assets/html/semi_horoskop.html">Semi Horoskop </a>
+        <a href="assets/html/message_transfer.html">Message Transfer</a>
+    </div>
     <script src="assets/js/main.js"></script>
 </body>
 
