--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="assets/html/lev1_2.html">Lev1_2 </a>
         <a href="assets/html/lev1_3.html">Lev1_3 </a>
         <a href="assets/html/lev2_2.html">Lev2_2 </a>
+        <a href="assets/html/lev2_3_2_4.html">Lev2_3</a>
+        <a href="assets/html/lev2_3_2_4.html">Lev2_4</a>
         <a href="assets/html/lev2_5.html">Lev2_5 </a>
         <a href="assets/html/lev2_7.html">Lev2_7 </a>
         <a href="assets/html/semi_horoskop.html">Semi Horoskop </a>
