Fehlerbehebung semi horoskop

--- a/assets/html/semi_horoskop.html
+++ b/assets/html/semi_horoskop.html
@@ -15,19 +15,20 @@
     <div id="box">
         <form onsubmit="return false">
             <select name="mylist" size="3" id="sternzeichen">
-                <option value="1">ARIES</option>
-                <option value="2">TAURUS</option>
-                <option value="3">GEMINI</option>
-                <option value="4">CANCER</option>
-                <option value="5">LEO</option>
-                <option value="6">VIRGO</option>
-                <option value="7">LIBRA</option>
-                <option value="8">SCORPIO</option>
-                <option value="9">SACITTARIUS</option>
-                <option value="10">CAPRICORN</option>
-                <option value="11">AQUARIUS</option>
-                <option value="12">PISCES</option>
+                <option value="1">März</option>
+                <option value="2">April</option>
+                <option value="3">Mai</option>
+                <option value="4">Juni</option>
+                <option value="5">Juli</option>
+                <option value="6">August</option>
+                <option value="7">September</option>
+                <option value="8">Oktober</option>
+                <option value="9">November</option>
+                <option value="10">Dezember</option>
+                <option value="11">Januar</option>
+                <option value="12">Februar</option>
             </select>
+            <p>Wählen Sie einen Monat aus. Und wir sagen Ihnen ihr Horoskop 🔮.</p>
             <input type="submit" value="Abschicken" onclick="showHoroskop()">
         </form>
         <div id="horoskop"></div>
